<!--
  ~ fragment_insert_stockxml
  ~ StokBarang
  ~
  ~ Created by I Nengah Januartha on 10/18/17 1:14 PM
  ~ Copyright (c) 2017 I Nengah Januartha. All right reserved.
  ~
  ~ Last modified 10/18/17 1:14 PM
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scroll_view"
    tools:context="com.janumedia.app.stocksales.InsertFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_type"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:prompt="@string/prompt_type"
            android:theme="@style/ThemeSpinner">
        </android.support.v7.widget.AppCompatSpinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/group_input_type">
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                android:paddingLeft="12dp"
                android:hint="@string/input_type"
                android:inputType="text"
                android:id="@+id/input_type"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:src="@mipmap/ic_clear_black_24dp"
                android:onClick="onClose"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_name"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:prompt="@string/prompt_name"
            android:theme="@style/ThemeSpinner">
        </android.support.v7.widget.AppCompatSpinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/group_input_name">
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                android:paddingLeft="12dp"
                android:hint="@string/input_name"
                android:inputType="text"
                android:id="@+id/input_name"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:src="@mipmap/ic_clear_black_24dp"
                android:onClick="onClose"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_size"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:prompt="@string/prompt_size"
            android:theme="@style/ThemeSpinner">
        </android.support.v7.widget.AppCompatSpinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/group_input_size">
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                android:paddingLeft="12dp"
                android:hint="@string/input_size"
                android:inputType="text"
                android:id="@+id/input_size"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:src="@mipmap/ic_clear_black_24dp"
                android:onClick="onClose"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_theme"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:prompt="@string/prompt_theme"
            android:theme="@style/ThemeSpinner">
        </android.support.v7.widget.AppCompatSpinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/group_input_theme">
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                android:paddingLeft="12dp"
                android:hint="@string/input_theme"
                android:inputType="text"
                android:id="@+id/input_theme"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:padding="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:src="@mipmap/ic_clear_black_24dp"
                android:onClick="onClose"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingLeft="12dp"
                android:textSize="18sp"
                android:textColor="@color/colorBlack"
                android:layout_weight="3"
                android:text="Stock : "/>

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:paddingBottom="20dp"
                android:paddingLeft="12dp"
                android:textAlignment="center"
                android:hint="0"
                android:inputType="numberDecimal|numberSigned"
                android:id="@+id/input_text"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:onClick="onInsert"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:text="INSERT" />
            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:onClick="onDelete"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp"
                android:layout_weight="1"
                android:textColor="@color/colorWhite"
                android:background="@color/colorRed"
                android:id="@+id/button_remove"
                android:text="REMOVE" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
