<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/no_stok"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:orientation="vertical"
            android:id="@+id/layout_container">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_type"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:prompt="@string/prompt_type"
                android:theme="@style/ThemeSpinner">
            </android.support.v7.widget.AppCompatSpinner>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_name"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:prompt="@string/prompt_name"
                android:theme="@style/ThemeSpinner">
            </android.support.v7.widget.AppCompatSpinner>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_size"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:prompt="@string/prompt_size"
                android:theme="@style/ThemeSpinner">
            </android.support.v7.widget.AppCompatSpinner>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_theme"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:prompt="@string/prompt_theme"
                android:theme="@style/ThemeSpinner">
            </android.support.v7.widget.AppCompatSpinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="12dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"
                    android:layout_weight="3"
                    android:text="Total : "/>

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.6"
                    android:layout_marginTop="15dp"
                    android:paddingBottom="20dp"
                    android:paddingLeft="12dp"
                    android:textAlignment="center"
                    android:hint="0"
                    android:inputType="numberDecimal|numberSigned"
                    android:id="@+id/input_text"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="12dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"
                    android:layout_weight="2.4"
                    android:text="of 30"
                    android:id="@+id/text_current_value"/>

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:onClick="onCheckout"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:text="CHECK OUT" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
